plugins {
    id 'org.springframework.boot' version '2.4.2'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'umc.spring'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'



configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    compileOnly 'org.projectlombok:lombok:1.18.24'


    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly 'mysql:mysql-connector-java'
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //yml 파일 암호화
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'

    //https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'

    //google login 관련 추가
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation(group: 'io.jsonwebtoken', name: 'jjwt', version: '0.7.0')

}

tasks.named('test') {
    useJUnitPlatform()
}
